--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ body{
     font-family: sans-serif;
     overflow-x: hidden!important;
 }
+
+.h3-list{
+	color: #BE2525;
+	font-size: 20px;
+	font-weight: 600;
+}
 /* Custom scroll-bar styling */
 
 ::-webkit-scrollbar {
@@ -111,6 +117,10 @@ body{
 }
 
 /*--------------------- ABOUT --------------------------*/
+
+#about {
+    padding: 50px 0;
+}
 .red-color{
 	color:#BE2525;
 }
@@ -120,4 +130,27 @@ body{
 	font-size: 18px;
 	font-weight: 500;
 	margin: 20px 0;
+}
+
+.about_img_01{
+        width: 100px;
+        height: 100px;
+        margin: 20px 0;
+}
+
+.about_img_02{
+    width: 100px;
+    height: 100px;
+    margin: 20px 0;
+}
+
+.about-body li{
+	color: #1D2934;
+    list-style: none;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.about-col{
+    padding: 0 20px;
 }
