--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ body{
     background-image: linear-gradient(to right, #1D2934, #BE2525);
     padding-top: 5%;
     color: #fff !important;
+    height: 750px;
 }
 
 .promo-title{
@@ -112,6 +113,7 @@ body{
 }
 
 .bottom-img{
+    margin: 150px 0 0 0;
     width: 100%;
     height: 250px;
 }
@@ -125,6 +127,29 @@ body{
 	color:#BE2525;
 }
 
+.title-text::before{
+
+    content:'';
+    background: #1D2934;
+    height: 5px;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    transform: translateY(50px);
+}
+
+.title-text::after{
+
+    content:'';
+    background: #1D2934;
+    height: 10px;
+    width: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    transform: translateY(4px);
+}
 #title-body{
 	color:#1D2934;
 	font-size: 18px;
