--- a/css/style.css
+++ b/css/style.css
@@ -310,40 +310,40 @@ Solutions div animation
 }
 
 .img-grid-1{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-1.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-1.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
 }
 .img-grid-2{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-2.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-2.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
 }
 
 .img-grid-3{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-3.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-3.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
 }
 
 .img-grid-4{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-4.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-4.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
 }
 .img-grid-5{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-5.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-5.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
 }
 
 .img-grid-6{
-	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-6.png');
+	background:linear-gradient(to bottom,rgba(0,0,0, 0), rgba(54, 88, 120, 0.59)), url('../img/img-grid-6.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover
